Minio dev : 1 - add configuration to use env variables for minio and datasource password 2 - configure minio client to create a default bucket if not exists and enable versioning in this bucket 3 - add the possibility to download all the files inside a specific directory inside the bucket 4 - add create directory inside a bucket

--- a/minio/src/main/resources/application-dev.properties
+++ b/minio/src/main/resources/application-dev.properties
@@ -9,8 +9,8 @@ spring.application.name=zenerator
 
 
 spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.password=${DATA_SOURCE_PASSWORD:}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
@@ -32,9 +32,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 server.port = 8037
 spring.security.user.password=generated
 
-minio.endpoint=http://localhost:9000
-minio.accessKey=TQUq2fhg9L3QT8EYmCTB
-minio.secretKey=IpOrBEy3cC3Cb7ZNY648WXY2e8UsL2ThNqjKBTZU
+minio.endpoint=${MINIO_ENDPOINT:http://localhost:9000}
+minio.accessKey=${MINIO_USERNAME:TQUq2fhg9L3QT8EYmCTB}
+minio.secretKey=${MINIO_PASSWORD:wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY}
+minio.default.bucket=${MINIO_BUCKET:gedbucket}
 
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
